--- a/pages/index.css
+++ b/pages/index.css
@@ -1,2 +1,4 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
+@import url(../styles/nav.css);
+@import url(../styles/content.css);
