--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,27 +1,3 @@
 .content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.content__cards {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 1280px;
-  height: 970px;
-  top: 310px;
-  left: 80px;
-  padding-bottom: 40px;
-  gap: 20px;
-}
-
-.content__card {
-  width: 413px;
-  height: 445px;
-}
-
-.content__card_image {
-  max-width: 413px;
-  max-height: 413px;
+  padding: 0 20px;
 }
