--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,21 +1,38 @@
 .profile {
+  display: flex;
+  width: 100%;
+  padding: 34px 0 20px;
+  border-bottom: 1px solid rgba(33, 33, 33, 0.4); /* #212121 with opacity set to 40%*/
 }
 
 .profile__avatar {
+  margin-right: 20px;
+}
+
+.profile__column {
+  display: flex;
+  flex-direction: column;
 }
 
 .profile__name {
+  margin: 0 0 12px;
+  font-weight: 500;
 }
 
 .profile__description {
+  margin: 0;
 }
 
 .profile__edit-button {
   display: flex;
   align-items: center;
+  margin-top: auto;
+  background-color: transparent;
+  border: none;
 }
 
 .profile__add-button {
+  margin-left: auto;
   background-color: #000;
   color: #fff;
   display: flex;
