--- a/blocks/card.css
+++ b/blocks/card.css
@@ -34,4 +34,30 @@
   background-color: transparent;
   opacity: 40%;
   cursor: pointer;
+  background-size: contain;
+}
+
+@media screen and (max-width: 627px) {
+  .card {
+    width: 288px;
+    height: 312px;
+  }
+
+  .card__image {
+    width: 288px;
+    height: 288px;
+  }
+
+  .card__title {
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+  .card__like-button {
+    width: 20px;
+    height: 18px;
+    padding: 0;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
 }
