--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,6 +23,9 @@
 
 .profile__description {
   margin: 0;
+  opacity: 0.7;
+  font-size: 16px;
+  line-height: 16px;
 }
 
 .profile__edit-button {
@@ -53,12 +56,38 @@
 @media screen and (max-width: 627px) {
   .profile {
     flex-direction: column;
+    align-items: center;
+    text-align: center;
     max-width: 288px;
-    justify-content: center;
+    padding-top: 20px;
   }
 
   .profile__avatar {
     margin-right: 0;
     height: 80px;
     width: 80px;
+    padding-bottom: 12px;
   }
+
+  .profile__name {
+    margin-bottom: 6px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .profile__description {
+    margin-bottom: 32px;
+  }
+
+  .profile__edit-button {
+    justify-content: center;
+    padding: 0;
+    opacity: 0.7;
+    margin-bottom: 20px;
+  }
+
+  .profile__add-button {
+    width: 100%;
+    padding: 0;
+  }
+}
