--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -19,13 +19,25 @@
 .profile__name {
   margin: 0 0 12px;
   font-weight: 500;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__description {
   margin: 0;
   opacity: 0.7;
   font-size: 16px;
-  line-height: 16px;
+  line-height: 1;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__edit-button {
@@ -72,11 +84,13 @@
   .profile__name {
     margin-bottom: 6px;
     font-size: 20px;
-    line-height: 20px;
+    line-height: 1;
+    max-width: 288px;
   }
 
   .profile__description {
     margin-bottom: 32px;
+    max-width: 288px;
   }
 
   .profile__edit-button {
