--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,16 +1,19 @@
 .card {
-  width: 413px;
-  height: 445px;
+  max-width: 413px;
+  max-height: 445px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  row-gap: 12px;
 }
 
 .card__image {
-  width: 413px;
-  height: 413px;
+  max-width: 413px;
+  max-height: 413px;
+  width: 100%;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .card__content {
@@ -23,12 +26,10 @@
   margin: 0;
   font-weight: 500;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 1.2;
   text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
 }
 
 .card__like-button {
@@ -37,9 +38,13 @@
   height: 20px;
   border: none;
   background-color: transparent;
-  opacity: 40%;
-  cursor: pointer;
+  opacity: 0.4;
   background-size: contain;
+}
+
+.card__like-button:hover {
+  cursor: pointer;
+  opacity: 1;
 }
 
 @media screen and (max-width: 627px) {
@@ -49,13 +54,13 @@
   }
 
   .card__image {
-    width: 288px;
-    height: 288px;
+    max-width: 288px;
+    max-height: 288px;
+    width: 100%;
   }
 
   .card__title {
     font-size: 16px;
-    line-height: 16px;
   }
 
   .card__like-button {
