--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -9,6 +9,8 @@
   margin-right: 20px;
   height: 190px;
   width: 190px;
+  border-radius: 8px;
+  object-fit: cover;
 }
 
 .profile__column {
@@ -17,10 +19,12 @@
 }
 
 .profile__name {
+  color: #212121;
   margin: 0 0 12px;
   font-weight: 500;
   text-overflow: ellipsis;
   overflow: hidden;
+  line-clamp: 3;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
@@ -31,9 +35,11 @@
   margin: 0;
   opacity: 0.7;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1;
   text-overflow: ellipsis;
   overflow: hidden;
+  line-clamp: 3;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
@@ -41,13 +47,20 @@
 }
 
 .profile__edit-button {
+  color: #212121;
+  font-weight: 500;
   display: flex;
   align-items: center;
   margin-top: auto;
   background-color: transparent;
   border: none;
   gap: 8px;
+  opacity: 0.7;
+}
+
+.profile__edit-button:hover {
   cursor: pointer;
+  opacity: 1;
 }
 
 .profile__add-button {
@@ -57,12 +70,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 149px;
+  width: 157px;
   height: 52px;
   gap: 8px;
   border-radius: 8px;
   align-self: flex-end;
+}
+
+.profile__add-button:hover {
   cursor: pointer;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 627px) {
@@ -96,7 +113,6 @@
   .profile__edit-button {
     justify-content: center;
     padding: 0;
-    opacity: 0.7;
     margin-bottom: 20px;
   }
 
