--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,6 +1,5 @@
 .card {
   max-width: 413px;
-  max-height: 445px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -23,6 +22,7 @@
 }
 
 .card__title {
+  max-width: 350px;
   margin: 0;
   font-weight: 500;
   font-size: 20px;
@@ -49,8 +49,8 @@
 
 @media screen and (max-width: 627px) {
   .card {
-    width: 288px;
-    height: 312px;
+    max-width: 288px;
+    width: 100%;
   }
 
   .card__image {
@@ -60,6 +60,7 @@
   }
 
   .card__title {
+    max-width: 250px;
     font-size: 16px;
   }
 
