--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -19,6 +19,8 @@
 }
 
 .profile__name {
+  font-size: 32px;
+  line-height: 1;
   color: #212121;
   margin: 0 0 12px;
   font-weight: 500;
@@ -95,7 +97,7 @@
     margin-right: 0;
     height: 80px;
     width: 80px;
-    padding-bottom: 12px;
+    margin-bottom: 12px;
   }
 
   .profile__name {
