--- a/blocks/card.css
+++ b/blocks/card.css
@@ -32,7 +32,7 @@
   overflow: hidden;
 }
 
-.card__like-button {
+.card__like-btn {
   background-image: url(../images/heart-icon.svg);
   width: 23px;
   height: 20px;
@@ -42,7 +42,7 @@
   background-size: contain;
 }
 
-.card__like-button:hover {
+.card__like-btn:hover {
   cursor: pointer;
   opacity: 1;
 }
@@ -64,7 +64,7 @@
     font-size: 16px;
   }
 
-  .card__like-button {
+  .card__like-btn {
     width: 20px;
     height: 18px;
     padding: 0;
