--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -48,7 +48,7 @@
   max-width: 420px;
 }
 
-.profile__edit-button {
+.profile__edit-btn {
   color: #212121;
   font-weight: 500;
   display: flex;
@@ -60,12 +60,12 @@
   opacity: 0.7;
 }
 
-.profile__edit-button:hover {
+.profile__edit-btn:hover {
   cursor: pointer;
   opacity: 1;
 }
 
-.profile__add-button {
+.profile__add-btn {
   margin-left: auto;
   background-color: #000;
   color: #fff;
@@ -79,7 +79,7 @@
   align-self: flex-end;
 }
 
-.profile__add-button:hover {
+.profile__add-btn:hover {
   cursor: pointer;
   opacity: 0.8;
 }
@@ -112,13 +112,13 @@
     max-width: 288px;
   }
 
-  .profile__edit-button {
+  .profile__edit-btn {
     justify-content: center;
     padding: 0;
     margin-bottom: 20px;
   }
 
-  .profile__add-button {
+  .profile__add-btn {
     width: 100%;
     padding: 0;
   }
