Added alt text to card images and hover states to input and close button on form

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -41,6 +41,10 @@
   cursor: pointer;
 }
 
+.modal__close-btn:hover {
+  opacity: 1;
+}
+
 .modal__title {
   margin: 0 0 32px;
   font-family: "Poppins", sans-serif;
@@ -70,6 +74,11 @@
   font-weight: 500;
   color: #212121;
 }
+
+.modal__input:hover {
+  border-color: #212121;
+}
+
 .modal__submit-btn {
   background-color: #000;
   color: #fff;
