--- a/blocks/card.css
+++ b/blocks/card.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: space-between;
   row-gap: 12px;
+  position: relative;
 }
 
 .card__image {
@@ -33,18 +34,41 @@
 }
 
 .card__like-btn {
-  background-image: url(../images/heart-icon.svg);
+  background: transparent url(../images/heart-icon.svg) center no-repeat;
   width: 23px;
   height: 20px;
   border: none;
-  background-color: transparent;
   opacity: 0.4;
-  background-size: contain;
 }
 
 .card__like-btn:hover {
   cursor: pointer;
   opacity: 1;
+}
+
+.card__like-btn_liked {
+  background-image: url(../images/heart-icon-liked.svg);
+  opacity: 1;
+}
+
+.card__like-btn_liked:hover {
+  background-image: url(../images/heart-icon-liked-hover.svg);
+}
+
+.card__delete-btn {
+  background: transparent url(../images/delete-icon.svg) center no-repeat;
+  width: 32px;
+  height: 32px;
+  border: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1;
+}
+
+.card__delete-btn:hover {
+  cursor: pointer;
+  background-image: url(../images/delete-icon-hover.svg);
 }
 
 @media screen and (max-width: 627px) {
