--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,6 +10,7 @@
   align-items: center;
   visibility: hidden;
   padding: 0 20px;
+  z-index: 3;
 }
 
 .modal_opened {
@@ -26,22 +27,34 @@
   position: relative;
 }
 
+.modal__container_type_preview {
+  padding: 0;
+  background-color: transparent;
+}
+
 .modal__close-btn {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  top: 32px;
-  right: 50px;
   width: 40px;
   height: 40px;
-  background-image: url(../images/close-icon.svg);
-  background-color: #fff;
+  background: transparent url(../images/close-icon.svg) center no-repeat;
+  background-size: 35px 35px;
   border: none;
+  position: absolute;
+  top: 32px;
+  right: 50px;
+  padding: 0;
+  margin: 0;
   opacity: 0.4;
-  cursor: pointer;
 }
 
 .modal__close-btn:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.modal__close-btn_type_preview {
+  background-image: url(../images/close-icon-modal-preview.svg);
+  top: 0;
+  right: -52.5px;
   opacity: 1;
 }
 
@@ -97,6 +110,27 @@
 .modal__submit-btn:hover {
   background-color: rgba(0, 0, 0, 0.8);
   cursor: pointer;
+}
+
+.modal__image {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+  max-width: 80vw;
+  max-height: 80vh;
+}
+
+.modal__caption {
+  padding: 4px 8px;
+  background-color: #212121;
+  color: #fff;
+  border-radius: 8px;
+  margin-top: 8px;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  line-height: 1.2;
+  display: inline-block;
 }
 
 @media screen and (max-width: 627px) {
