--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -35,16 +35,20 @@
   padding: 0;
   background-color: transparent;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .modal__close-btn {
   width: 40px;
   height: 40px;
   background: transparent url(../images/close-icon.svg) center no-repeat;
+  background-size: 35px 35px;
   border: none;
   position: absolute;
-  top: 32px;
-  right: 50px;
+  top: 16px;
+  right: 16px;
   padding: 0;
   margin: 0;
   opacity: 0.4;
@@ -57,8 +61,8 @@
 
 .modal__close-btn_type_preview {
   background-image: url(../images/close-icon-modal-preview.svg);
-  top: 0;
-  right: -52.5px;
+  top: 16px;
+  right: 16px;
   opacity: 1;
 }
 
@@ -140,6 +144,7 @@
   font-size: 20px;
   line-height: 1.2;
   display: inline-block;
+  align-self: ;
 }
 
 @media screen and (max-width: 627px) {
@@ -170,16 +175,22 @@
   }
 
   .modal__image {
+    max-width: 288px;
     width: 100%;
   }
 
+  .modal__container_type_preview {
+    padding: 8px;
+    width: auto;
+  }
+
   .modal__close-btn_type_preview {
-    position: inherit;
-    top: 8px;
-    left: 80%;;
+    top: -40px;
+    right: 12px;
   }
 
   .modal__caption {
     font-size: 16px;
+    align-self: flex-start;
   }
 }
