--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -45,7 +45,6 @@
   width: 40px;
   height: 40px;
   background: transparent url(../images/close-icon.svg) center no-repeat;
-  background-size: 35px 35px;
   border: none;
   position: absolute;
   top: 16px;
@@ -69,6 +68,7 @@
 
 .modal__close-btn_type_preview:hover {
   background-image: url(../images/close-icon-modal-preview-hover.svg);
+  opacity: 0.4;
 }
 
 .modal__title {
