--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -148,6 +148,16 @@
   align-self: flex-start;
 }
 
+.modal__error {
+  display: block;
+  color: #ff0000;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  line-height: 110.00000000000001%;
+  font-weight: 500;
+  letter-spacing: 0%;
+}
+
 @media screen and (max-width: 627px) {
   .modal {
     padding: 0 10px;
