Created functions to allow modals being closed when clicking outside of modals and when pressing Escape key. Also fixed modals to reset properly when being closed.

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -9,8 +9,8 @@
 }
 
 .card__image {
-  max-width: 413px;
-  max-height: 413px;
+  width: 413px;
+  height: 413px;
   width: 100%;
   object-fit: cover;
   border-radius: 8px;
